[project]
name = "hilbert-bytes"
version = "0.7.0"
description = "A python library for converting between d-dimensional points and indices on a hilbert curve"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["numba>=0.61.0", "numpy>=2.1.3"]
keywords = [
    "hilbert-curve",
    "space-filling-curve",
    "numpy",
]

[project.urls]
homepage = "https://hafaio.github.io/hilbert-bytes"
documentation = "https://hafaio.github.io/hilbert-bytes"
repository = "https://github.com/hafaio/hilbert-bytes"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "nbformat>=5.10.4",
    "numpy-hilbert-curve>=1.0.1",
    "plotly>=6.0.0",
    "pyright>=1.1.398",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
strict = ["hilbert_bytes", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.uv]
keyring-provider = "subprocess"
