[project]
name = "hilbert-bytes"
version = "0.7.0"
description = "A python library for converting between d-dimensional points and indices on a hilbert curve"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["numba>=0.66.0", "numpy>=2.4.6"]
keywords = [
    "hilbert-curve",
    "space-filling-curve",
    "numpy",
]

[project.urls]
homepage = "https://hafaio.github.io/hilbert-bytes"
documentation = "https://hafaio.github.io/hilbert-bytes"
repository = "https://github.com/hafaio/hilbert-bytes"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "myst-parser>=5.1.0",
    "nbformat>=5.10.4",
    "numpy-hilbert-curve>=1.0.1",
    "plotly>=6.8.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "sphinx>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
strict = ["hilbert_bytes", "tests"]

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.uv]
keyring-provider = "subprocess"
